--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="form">        
             <h2>Add new book</h2>
-            <form>
+            <form id="form">
                 <div class="formdiv">
                     <label for="title">Title:</label>
                     <input type="text" id="title" pattern="[A-Za-z]{2,64}" placeholder="Alice in Wonderland" required>
