--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <form id="form" method="post">
                 <div class="formdiv">
                     <label for="title">Title:</label>
-                    <input type="text" id="title" pattern="[A-Za-z]{2,64}" placeholder="Alice in Wonderland" required>
+                    <input type="text" id="title" pattern="[A-Za-z]" minlength="3" maxlength="32" placeholder="Alice in Wonderland" required>
                 </div>
                 <div class="formdiv">
                     <label for="author">Author:</label>
-                    <input type="text" id="author" pattern="[A-Za-z]{2,64}" placeholder="Lewis Carroll" required>
+                    <input type="text" id="author" pattern="[A-Za-z]" minlength="3" maxlength="32" placeholder="Lewis Carroll" required>
                 </div>
                 <div class="formdiv">
                     <label for="pages">Pages:</label>
-                    <input type="number" id="pages" placeholder="2137" required>
+                    <input type="number" id="pages" min="1" max="10000" placeholder="2137" required>
                 </div>
                 <button type="submit" id="addbutton">Add book</button>
             </form>
